# rocketseat_python_flask_realtime_api

./: .gitignore  Desafio03.txt  README.md  X Anotações.md  docker-compose.yaml  pyproject.toml
sample/payment/src/: app.py
sample/payment/src/db_models/: payment.py
sample/payment/src/payments/: pix.py
sample/payment/src/static/css/: styles.css
sample/payment/src/templates/: 404.html  confirmed_payment.html
sample/payment/tests/unit/: conftest.py  test_payment_run_app.py  test_pix.py
samples/payment/database/: database.db
samples/payment/src/: app.py
samples/payment/src/db_models/: payment.py
samples/payment/src/payments/: pix.py
samples/payment/src/templates/: confirmed_payment.html  payment.html
scripts/: build.sh  lint.sh  test.sh
src/: app.py
src/templates/: index.html
tests/unit/: conftest.py  test_chat_websocket.py  test_run_app.py
